改变颜色，增加pmxg.cf链接

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 	.bar{
 		width: 33.3%;
 		float: left;
-		background: #cc8;
+		background: #687D27;
 		height: 40px;
 		}
 	.item{
@@ -54,7 +54,7 @@
 		right: 0;
 		bottom: 0;
 		height: 55px;
-		background: #cc8
+		background: #687D27;
 		}
 	a:hover{
 		color: red;
@@ -176,10 +176,11 @@
 	</div>
 	<div id="foot">
 		<ul id="ul2">
-			<li class="lis"><a href="http://weibo.com/pmxg/">weibo</a></li>
+			<li class="lis"><a href="http://weibo.com/pmxg/">Weibo</a></li>
 			<li class="lis logo"></li>
-			<li class="lis"><a href="mailto:pmxg@foxmail.com">Email</a></li>
+			<li class="lis"><a href="mailto:pmxg@foxmail.com">&nbspEmail</a></li>
 			<li class="lis logo" id="sec"></li>
+			<li class="lis"><a href="http://pmxg.cf">&nbspPMXG.CF</a></li>
 		</ul>
 	</div>
 <script type="text/javascript" src="js/bg.js"></script>
